--- a/application.yaml
+++ b/application.yaml
@@ -17,9 +17,13 @@ spring:
 
 indexing-settings:
   sites:
-    - url: https://www.lenta.ru
-      name: Лента.ру
-    - url: https://www.skillbox.ru
-      name: Skillbox
-    - url: https://www.playback.ru
+    - url: http://www.playback.ru/
       name: PlayBack.Ru
+    - url: https://dimonvideo.ru/
+      name: DimonVideo.Ru
+    - url: https://dombulgakova.ru/
+      name: DomBulgakova.Ru
+    - url: https://et-cetera.ru/mobile/
+      name: EtCetera.Ru
+  user-agent: Mozilla/5.0 (Windows; U; WindowsNT 5.1; en-US; rv1.8.1.6) Gecko/20070725 Firefox/2.0.0.6
+  referrer: http://www.google.com
